k8s/TP Network Policies/descriptionFile/access-to-wit-pods-from-everywhere.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-to-wit-pods-from-everywhere
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: wit      
  ingress:
  - {}
