k8s/TP Network Policies/descriptionFile/access-to-wit-pods-from-specific-pods-in-same-namespace.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-to-wit-pods-from-specific-pods-in-same-namespace
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: wit      
  ingress:
  - from:
    - podSelector:
        matchLabels:
          wit-access: "true"
