k8s/TP Network Policies/descriptionFile/default-deny-all-ingress-traffic.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all-ingress-traffic
  namespace: default
spec:
  podSelector: {}     
  ingress: []
