k8s/TP Network Policies/descriptionFile/deny-all-ingress-trafic-to-wit-pods.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-ingress-trafic-to-wit-pods
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: wit      
  ingress: []
